--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ ul{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: lightblue;
+    background: dodgerblue;
 }
 
 .header__content{
